--- a/fly.toml
+++ b/fly.toml
@@ -8,7 +8,7 @@ primary_region = "sea"
 processes = []
 
 [build]
-  builder = "heroku/buildpacks:20"
+  builder = "heroku/builder:22"
 
 [env]
   PORT = "8080"
